Anpassung an größere Textgrößen

--- a/Anreise.html
+++ b/Anreise.html
@@ -70,7 +70,7 @@
                 Das G-Stone Rock Festival ist bequem mit öffentlichen Verkehrsmitteln erreichbar. Die nächstgelegene Bushaltestelle befindet sich nur wenige Gehminuten vom 
                 Festivalgelände entfernt und bietet direkte Verbindungen zu den Bahnhöfen <b>Bad Hofgastein</b> und <b>Bad Gastein</b>, welche regelmäßig vom ÖBB-Railjet angefahren werden.
                 <br />
-                Weitere Informationen zu den Fahrplänen und Verbindungen finden Sie auf der Website der ÖBB: <br />
+                Weitere Informationen zu den Fahrplänen und Verbindungen findest du auf der Website der ÖBB: <br />
                 <b>Zielstation: Bad Hofgastein Bertahof/Badesee</b> <br />
                 <a href="https://www.oebb.at/de/" target="_blank" style="text-decoration: none" class="bebas-neue purple">https://www.oebb.at/de/</a> <br />
             </p>
@@ -101,7 +101,7 @@
         <section id="Private-Anreise" class="Private-Anreise">
             <h4 class="heading-font yellow Überschrift-Anreise">Anreise mit dem Auto</h4>
             <p class="text-font yellow">Das Gasteinertal ist gut mit dem Auto erreichbar. Für Anreisende aus dem Süden empfiehlt sich die Nutzung der ÖBB-Autoschleuse durch den Tauerntunnel.
-                Weitere Informationen finden Sie unter: <br />
+                Weitere Informationen findest du unter: <br />
                 <a href="https://www.oebb.at/de/regionale-angebote/kaernten/autoschleuse-tauernbahn" target="_blank" class="bebas-neue yellow" style="text-decoration: none">https://www.oebb.at/de/regionale-angebote/kaernten/autoschleuse-tauernbahn</a> <br />
                 
                 Das Festivalgelände ist über die Gasteiner Bundesstraße direkt erreichbar.</p>
