--- a/FAQ.html
+++ b/FAQ.html
@@ -61,10 +61,10 @@
                              fill="#7400BE" stroke="#7400BE" stroke-width="3.5"><path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z"/>
                             </svg>
                         </a>
-                        <p class="bebas-rounded purple">Wann findet das G-Stone-Rock Festival Statt?</p>
+                        <p class="bebas-rounded purple">Wann findet das G-Stone Rock Festival Statt?</p>
                     </div>
                     <div class="antwort">
-                        <p class="bebas-pro purple">Das G-Stone-Rock Festival findet zwischen 31.07-02.08 statt. Am 31.07. beginnt die Anreise. Ab 01.08. finden die Konzerte statt.</p>
+                        <p class="bebas-pro purple">Das G-Stone Rock Festival findet zwischen 31.07-02.08 statt. Der 31.07. ist für die Anreise gedacht. Am 01.08. und 02.08. finden die Konzerte statt. Am 03.08. kannst du die Festival-Stimmung noch ausklingen lasen.</p>
                     </div>
                 </li>
                 <li>
@@ -74,7 +74,7 @@
                              fill="#7400BE" stroke="#7400BE" stroke-width="3.5"><path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z"/>
                             </svg>
                         </a>
-                        <p class="bebas-rounded purple">Wo findet das G-Stone-Rock Festival statt?</p>
+                        <p class="bebas-rounded purple">Wo findet das G-Stone Rock Festival statt?</p>
                     </div>
                     <div class="antwort">
                         <p class="bebas-pro purple">Beim Gasteiner Badesee, Vorderschneeberg 144, 5630 Bad Hofgastein.</p>
@@ -87,10 +87,10 @@
                              fill="#7400BE" stroke="#7400BE" stroke-width="3.5"><path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z"/>
                             </svg>
                         </a>
-                        <p class="bebas-rounded purple">Wie sind die Öffnungszeiten des G-Stone-Rock Festivals?</p>
+                        <p class="bebas-rounded purple">Wie sind die Öffnungszeiten des G-Stone Rock Festivals?</p>
                     </div>
                     <div class="antwort">
-                        <p class="bebas-pro purple">Das Festival-Gelände ist rund um die Uhr geöffnet. Live-Musik spielt von 17:00-23:30. Die Rezeption ist von 09:00-00:00 besetzt.</p>
+                        <p class="bebas-pro purple">Das Festivalgelände ist rund um die Uhr geöffnet. Live-Musik spielt von 17:00-23:30. Die Rezeption ist von 09:00-00:00 besetzt.</p>
                     </div>
                 </li>
                 <li>
@@ -116,7 +116,7 @@
                         <p class="bebas-rounded purple">Können Minderjährige das Festival besuchen?</p>
                     </div>
                     <div class="antwort">
-                        <p class="bebas-pro purple">Ja, aber nur mit einer volljährigen Begleitperson und der Einwilligung eines erziehungsberechtigten.</p>
+                        <p class="bebas-pro purple">Ja, aber nur mit einer volljährigen Begleitperson und der Einwilligung eines Erziehungsberechtigten.</p>
                     </div>
                 </li>
                 <li>
@@ -129,7 +129,7 @@
                         <p class="bebas-rounded purple">Welche Zahlungsmethoden werden beim Festival akzeptiert?</p>
                     </div>
                     <div class="antwort">
-                        <p class="bebas-pro purple">Beim Festival wird nur Bar-Zahlung akzeptiert. Es gibt einen Bankomat vor Ort.</p>
+                        <p class="bebas-pro purple">Beim Festival wird nur Bar-Zahlung akzeptiert. Es gibt einen Bankomaten vor Ort.</p>
                     </div>
                 </li>
                 <li>
@@ -142,7 +142,7 @@
                         <p class="bebas-rounded purple">Kann man beim Festival Zelte mieten?</p>
                     </div>
                     <div class="antwort">
-                        <p class="bebas-pro purple">Nein, es werden keine Zelte zur Verfügung gestellt.</p>
+                        <p class="bebas-pro purple">Nein, es werden keine Zelte zur Vermietung Angeboten.</p>
                     </div>
                 </li>
             <!--     <li>
