--- a/Terms.html
+++ b/Terms.html
@@ -58,7 +58,7 @@
             <ul class="festival-ordnung-flex-container">
                <li class="ordnungspunkt">
                     <h4 class="bebas-rounded purple">Herzlich Wilkommen beim G-Stone Rock Festival!</h4>
-                    <p class="bebas-pro purple">Um ein sicheres und angenehmes Erlebnis für alle Teilnehmer zu gewährleisten, bitten wir Sie, die folgenden Regeln und Bestimmungen einzuhalten. Mit dem Betreten des Festivalgeländes akzeptieren Sie diese Festivalordnung.</p>
+                    <p class="bebas-pro purple">Um ein sicheres und angenehmes Erlebnis für alle Teilnehmer zu gewährleisten, bitten wir dich, die folgenden Regeln und Bestimmungen einzuhalten. Mit dem Betreten des Festivalgeländes akzeptierst du diese Festivalordnung.</p>
                </li> 
                <li class="ordnungspunkt">
                     <h4 class="bebas-rounded purple">1. Zutritt</h4>
@@ -67,10 +67,10 @@
                             1.1. Der Zutritt zum Festivalgelände ist nur mit gültigem Ticket gestattet.
                         </li>
                         <li class="bebas-pro purple p">
-                            1.2. Tickets sind personalisiert und nicht übertragbar. Bitte führen Sie einen amtlichen Lichtbildausweis mit sich.
+                            1.2. Tickets sind personalisiert und nicht übertragbar. Bitte führe einen amtlichen Lichtbildausweis mit dir.
                         </li>
                         <li class="bebas-pro purple p">
-                            1.3. Jugendliche unter 16 Jahren dürfen nur in Begleitung eines Erziehungsberechtigten
+                            1.3. Jugendliche unter 16 Jahren dürfen nur in Begleitung eines Erziehungsberechtigten teilnehmen.
                         </li>
                     </ul> 
                 </li> 
@@ -92,13 +92,13 @@
                     <h4 class="bebas-rounded purple">3. Sicherheit</h4>
                         <ul>
                             <li class="bebas-pro purple p">
-                                3.1. Taschen- und Personenkontrollen können am Einlass durchgeführt werden. Besucher erklären sich hiermit einverstanden.
+                                3.1. Taschen- und Personenkontrollen können beim Einlass durchgeführt werden. Besucher erklären sich hiermit einverstanden.
                             </li>
                             <li class="bebas-pro purple p">
                                 3.2. Notausgänge und Fluchtwege sind jederzeit freizuhalten. Den Anweisungen des Sicherheitspersonals ist unbedingt Folge zu leisten.
                             </li>
                             <li class="bebas-pro purple p">
-                                3.3. Erste-Hilfe-Stationen stehen auf dem Gelände bereit. Wenden Sie sich im Notfall an das Sicherheitspersonal.
+                                3.3. Erste-Hilfe-Stationen stehen auf dem Gelände bereit. Wende dich im Notfall an das Sicherheitspersonal.
                             </li>
                         </ul>
                 </li> 
@@ -117,13 +117,13 @@
                     <h4 class="bebas-rounded purple">5. Umwelt- und Lärmschutz</h4>
                         <ul>
                             <li class="bebas-pro purple p">
-                                5.1. Bitte entsorgen Sie Abfälle in die dafür vorgesehenen Behälter und helfen Sie uns, das Gelände sauber zu halten.
+                                5.1. Bitte entsorge Abfälle in die dafür vorgesehenen Behälter und hilf uns dadurch, das Gelände sauber zu halten.
                             </li>
                             <li class="bebas-pro purple p">
-                                5.2. Zelten und Campen ist nur in den ausgewiesenen Bereichen gestattet.
+                                5.2. Zelten ist nur in den ausgewiesenen Bereichen gestattet.
                             </li>
                             <li class="bebas-pro purple p">
-                                5.3. Beachten Sie die Nachtruhezeiten auf den Campingflächen.
+                                5.3. Beachte die Nachtruhezeiten auf den Campingflächen.
                             </li>
                         </ul>
                 </li> 
@@ -131,7 +131,7 @@
                     <h4 class="bebas-rounded purple">6. Medien und Datenschutz</h4>
                         <ul>
                             <li class="bebas-pro purple p">
-                                6.1. Auf dem Festival werden Foto- und Videoaufnahmen gemacht. Mit Ihrem Zutritt erklären Sie sich einverstanden, dass diese Aufnahmen für Werbezwecke verwendet werden können.
+                                6.1. Auf dem Festival werden Foto- und Videoaufnahmen gemacht. Mit dem Zutritt erklärst du dich einverstanden, dass diese Aufnahmen für Werbezwecke verwendet werden können.
                             </li>
                             <li class="bebas-pro purple p">
                                 6.2. Professionelle Foto- und Videoaufnahmen durch Besucher sind nur mit ausdrücklicher Genehmigung gestattet.
@@ -142,7 +142,7 @@
                     <h4 class="bebas-rounded purple">7. Haftung</h4>
                         <ul>
                             <li class="bebas-pro purple p">
-                                7.1. Der Veranstalter haftet nicht für Schäden, die durch Dritte oder höhere Gewalt entstehen.
+                                7.1. Der Veranstalter haftet nicht für Schäden, die durch Dritte oder Umweltfaktoren entstehen.
                             </li>
                             <li class="bebas-pro purple p">
                                 7.2. Besucher haften für Schäden, die sie selbst vorsätzlich oder fahrlässig verursachen.
@@ -153,26 +153,22 @@
                     <h4 class="bebas-rounded purple">8. Alkohol und Drogen</h4>
                         <ul>
                             <li class="bebas-pro purple p">
-                                8.1. Der Konsum von Alkohol ist nur für Personen ab 18 Jahren gestattet.
+                                8.1. Der Konsum von Alkohol ist nur für Personen ab 16 Jahren gestattet.
                             </li>
                             <li class="bebas-pro purple p">
-                                8.2. Der Besitz oder Konsum von illegalen Drogen ist untersagt und führt zum Ausschluss vom Festival.
+                                8.2. Der Besitz oder Konsum von illegalen Drogen ist untersagt.
                             </li>
-                        </ul>
                 </li> 
                 <li class="ordnungspunkt">
                     <h4 class="bebas-rounded purple">9. Parken und Anreise</h4>
                         <ul>
                             <li class="bebas-pro purple p">
-                                9.1. Parkplätze sind begrenzt und kostenpflichtig. Bitte nutzen Sie öffentliche Verkehrsmittel oder Shuttles, falls möglich.
-                            </li>
-                            <li class="bebas-pro purple p">
-                                9.2. Der Veranstalter übernimmt keine Haftung für Schäden oder Verluste auf den Parkplätzen.
+                                9.1. Der Veranstalter übernimmt keine Haftung für Schäden oder Verluste auf den Parkplätzen.
                             </li>
                         </ul>
                 </li> 
                 <li class="ordnungspunkt">
-                    <h4 class="bebas-rounded purple">Vielen Dank für Ihre Kooperation! Wir wünschen Ihnen ein unvergessliches Festivalerlebnis.</h4>
+                    <h4 class="bebas-rounded purple">Vielen Dank für deine Kooperation! Wir wünschen dir ein unvergessliches Festivalerlebnis.</h4>
                 </li> 
             </ul>
         </main>
