--- a/Anreise.html
+++ b/Anreise.html
@@ -31,8 +31,8 @@
             <div class="burger-menü">
                 <button class="burger-menü-button"><svg class="burger-menü-button" xmlns="http://www.w3.org/2000/svg" width="49.999" height="37.999" viewBox="0 0 49.999 37.999"><g transform="translate(-1706 -31)"><path d="M-8736-115a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Zm0-15a4,4,0,0,1-4-4,4,4,0,0,1,4-4h42a4,4,0,0,1,4,4,4,4,0,0,1-4,4Z" transform="translate(10446 184)"/></g></svg></button>
                 <nav class="dropdown-menu">
-                    <a href="#Tickets" class="dropdown-item heading-font main-color-1 dropdown-extra">Tickets</a>
-                    <a href="#Line-Up" class="dropdown-item heading-font main-color-1 dropdown-extra">Line-Up</a>
+                    <a href="index.html#Tickets" class="dropdown-item heading-font main-color-1 dropdown-extra">Tickets</a>
+                    <a href="index.html#Line-Up" class="dropdown-item heading-font main-color-1 dropdown-extra">Line-Up</a>
                     <a href="Zeltwiese.html" class="dropdown-item heading-font main-color-1 dropdown-extra Keinverweis">Zeltwiese</a>
                     <a href="#infos" class="dropdown-item heading-font main-color-1">Info</a>
                     <a href="#Private-Anreise" class="dropdown-item heading-font main-color-1 Keinverweis">Parken</a>
