--- a/index.html
+++ b/index.html
@@ -167,23 +167,23 @@
                 <div class="bands-carousel-item-track">
                     <div class="band band-side band-l">
                         <img src="Images/Bilder-Bands/fallinghigh.webp" alt="Foto der Band Falling High" class="band-foto">
-                        <a class="heading-font main-color-2 bandname">Falling High</a>
+                        <a class="heading-font main-color-2 bandname" href="https://falling-high.com/" target="_blank">Falling High</a>
                     </div>
                     <div class="band band-side band-ml">
                         <img src="Images/Bilder-Bands/AHARA.webp" alt="Foto der Band Ahara" class="band-foto">
-                        <a class="heading-font main-color-2 bandname">Ahara</a>
+                        <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/ahara_music/" target="_blank">Ahara</a>
                     </div>
                     <div class="band spotlight-band">
                         <img src="Images/Bilder-Bands/Dopamine.webp" alt="Foto der Band Dopamine" class="band-foto">
-                        <a class="heading-font main-color-2 bandname">Dopamine</a>
+                        <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/dopamine_band_/" target="_blank">Dopamine</a>
                     </div>
                     <div class="band band-side band-mr">
                         <img src="Images/Bilder-Bands/Hay-Fever.webp" alt="Foto der Band Hay Fever" class="band-foto">
-                        <a class="heading-font main-color-2 bandname">Hay Fever</a>
+                        <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/hayfever_band/" target="_blank">Hay Fever</a>
                     </div>
                     <div class="band band-side band-r">
                         <img src="Images/Bilder-Bands/Yellow-Furniture.webp" alt="Foto der Band main-color-2 Furniture" class="band-foto">
-                        <a class="heading-font main-color-2 bandname-zulang">Yellow-Furniture</a>
+                        <a class="heading-font main-color-2 bandname-zulang" href="https://www.facebook.com/howtoleavearoom" target="_blank">Yellow-Furniture</a>
                     </div>
                     
                     <div class="band band-hidden">
