--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div title="Text Startseite" class="bg-text-startseite">
                 <h4 class="heading-font main-color-1 überschrift-startseite">G-Stone Rock Festival</h4>
                 <p class="text-font main-color-1 text-startseite">
-                    Das G-Stone Rock Festival ist ein mehrtägiges Musikfestival am Gasteiner Badesee, das lokaler Rock-Musik aus Salzburg eine Bühne bietet. Live-Musik mit Camping in der malerischen Gasteiner Alpenkulisse, umgeben von Natur und Wanderwegen mit guter Verkehrsanbindung. Es wird zudem viel Wert auf Nachhaltigkeit und ein vielfältiges Gastronomieangebot gelegt.
+                    Das G-Stone Rock Festival ist ein mehrtägiges Musikfestival am Gasteiner Badesee, das lokaler Rock-Musik aus Salzburg eine Bühne bietet. Von 31.07.-02.08.2025 gibt es Live-Musik mit Zelt-Möglichkeit in der malerischen Gasteiner Alpenkulisse, umgeben von Natur und Wanderwegen mit guter Verkehrsanbindung. Es wird zudem viel Wert auf Nachhaltigkeit und ein vielfältiges Gastronomieangebot gelegt.
                 </p>
                 <div title="Buttons" class="startseite-buttons-container heading-font main-color-2">
                     <a title="Tickets" href="#Tickets" class="gefüllter-button-lila">
