--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                         <a class="heading-font main-color-2 bandname" href="https://falling-high.com/" target="_blank">Falling High</a>
                     </div>
                     <div class="band band-side band-ml">
-                        <img src="Images/Bilder-Bands/AHARA.webp" alt="Foto der Band Ahara" class="band-foto">
-                        <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/ahara_music/" target="_blank">Ahara</a>
+                        <img src="Images/Bilder-Bands/GMYAS - Band Foto Gig Mail.webp" alt="Foto der Band GMYAS" class="band-foto">
+                        <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/gmyas.music/" target="_blank">GMYAS</a>
                     </div>
                     <div class="band spotlight-band">
                         <img src="Images/Bilder-Bands/Dopamine.webp" alt="Foto der Band Dopamine" class="band-foto">
@@ -185,7 +185,10 @@
                         <img src="Images/Bilder-Bands/Yellow-Furniture.webp" alt="Foto der Band main-color-2 Furniture" class="band-foto">
                         <a class="heading-font main-color-2 bandname-zulang" href="https://www.facebook.com/howtoleavearoom" target="_blank">Yellow-Furniture</a>
                     </div>
-                    
+                    <div class="band band-side band-hidden">
+                        <img src="Images/Bilder-Bands/AHARA.webp" alt="Foto der Band Ahara" class="band-foto">
+                        <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/ahara_music/" target="_blank">Ahara</a>
+                    </div>
                     <div class="band band-hidden">
                         <img src="Images/LOGO/LOGO-Gelb.svg" alt="Foto der Band ..." class="band-foto">
                         <a class="heading-font main-color-2 bandname">7 more Bands to be Announced</a>
