--- a/index.html
+++ b/index.html
@@ -189,9 +189,13 @@
                         <img src="Images/Bilder-Bands/AHARA.webp" alt="Foto der Band Ahara" class="band-foto">
                         <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/ahara_music/" target="_blank">Ahara</a>
                     </div>
+                    <div class="band band-side band-hidden">
+                        <img src="Images/Bilder-Bands/Bumbatschak.webp" alt="Foto der Band Bumbatschak" class="band-foto">
+                        <a class="heading-font main-color-2 bandname" href="https://www.youtube.com/watch?v=kZExKVeqcpo&list=PLRkAXjsv68TTViDiC73vqbL-vF8Pw0Njw&index=3" target="_blank">Bumbatschak</a>
+                    </div>
                     <div class="band band-hidden">
                         <img src="Images/LOGO/LOGO-Gelb.svg" alt="Foto der Band ..." class="band-foto">
-                        <a class="heading-font main-color-2 bandname">6 more Bands to be Announced</a>
+                        <a class="heading-font main-color-2 bandname">3 more Bands to be Announced</a>
                     </div>
                 </div>
                 <a class="bands-button-right"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" 
