--- a/FAQ.html
+++ b/FAQ.html
@@ -129,7 +129,7 @@
                         <p class="bebas-rounded purple">Welche Zahlungsmethoden werden beim Festival akzeptiert?</p>
                     </div>
                     <div class="antwort">
-                        <p class="bebas-pro purple">Beim Festival wird nur Bar-Zahlung akzeptiert. Es gibt einen Bankomaten vor Ort.</p>
+                        <p class="bebas-pro purple">Beim Festival wird nur Bar-Zahlung akzeptiert.</p>
                     </div>
                 </li>
                 <li>
