--- a/Terms.html
+++ b/Terms.html
@@ -66,8 +66,8 @@
                         <li class="bebas-pro purple p">
                             1.1. Der Zutritt zum Festivalgelände ist nur mit gültigem Ticket gestattet.
                         </li>
-                        <li class="bebas-pro purple p">
-                            1.2. Tickets sind personalisiert und nicht übertragbar. Bitte führe einen amtlichen Lichtbildausweis mit dir.
+                         <li class="bebas-pro purple p">
+                            1.2. Tickets gelten nur für eine Person.
                         </li>
                         <li class="bebas-pro purple p">
                             1.3. Jugendliche unter 16 Jahren dürfen nur in Begleitung eines Erziehungsberechtigten teilnehmen.
@@ -123,7 +123,7 @@
                                 5.2. Zelten ist nur in den ausgewiesenen Bereichen gestattet.
                             </li>
                             <li class="bebas-pro purple p">
-                                5.3. Beachte die Nachtruhezeiten auf den Campingflächen.
+                                5.3. Beachte die Nachtruhezeiten auf der Zeltwiese.
                             </li>
                         </ul>
                 </li> 
