--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     document.querySelectorAll('.Keinverweis').forEach(item => {
                     item.addEventListener('click', (event) => {
                     event.preventDefault(); // Verhindert mögliche Standardaktionen
-                     alert('Diese Seite ist bald verfügbar!');
+                     alert('Das Zeltwiese-Extra ist nur vorort erhältlich.');
             });
         });
     });
@@ -129,15 +129,18 @@
                 <h1 class="heading-font main-color-2 tickets-überschrift">Tickets</h1>
                 <div class="preis-und-button">
                     <h2 class="heading-font main-color-2 tickets-angebote">Festivalpass</h2>
-                    <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button Keinverweis">-50€</a>
+                    <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button" href="https://kupfticket.com/events/gstone-rock-festival" target ="_blank">-50€</a>
                 </div>
                 <div class="preis-und-button">
                     <h2 class="heading-font main-color-2 tickets-angebote">Tages-Ticket</h2>
-                    <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button Keinverweis">-25€</a>
+                    <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button" href="https://kupfticket.com/events/gstone-rock-festival" target = "_blank">-25€</a>
                 </div>
                 <div class="preis-und-button">
                     <h2 class="heading-font main-color-2 tickets-angebote">Zeltwiese-Extra</h2>
                     <a class="heading-font main-color-2 rahmen-button-gelb tickets-preise-button Keinverweis">-10€</a>
+                </div>
+                <div class="preise-und-button">
+                    <p class ="text-font main-color-2 kleingedrucktes">Tickets sind beim Gasteiner Badesee und bei den Bands erhältlich. Online-Tickets haben zusätzliche Kosten für die Zahlungsabwicklung inkludiert. Das Zeltwiese Extra ist vorort verfügbar.</p>
                 </div>
             </div>
             <script>
@@ -195,7 +198,7 @@
                     </div>
                     <div class="band band-hidden">
                         <img src="Images/LOGO/LOGO-Gelb.svg" alt="Foto der Band ..." class="band-foto">
-                        <a class="heading-font main-color-2 bandname">3 more Bands to be Announced</a>
+                        <a class="heading-font main-color-2 bandname">1 more Bands to be Announced</a>
                     </div>
                 </div>
                 <a class="bands-button-right"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" 
