--- a/FAQ.html
+++ b/FAQ.html
@@ -100,6 +100,19 @@
                              fill="#7400BE" stroke="#7400BE" stroke-width="3.5"><path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z"/>
                             </svg>
                         </a>
+                        <p class="bebas-rounded purple">Wo kann man Tickets kaufen?</p>
+                    </div>
+                    <div class="antwort">
+                        <p class="bebas-pro purple">Tickets können beim Gasteiner Badesee, bei den Bands oder auf anfrage an organisation@gstonerock.at gekauft werden. Online können Tickets auf <a href="https://kupfticket.com/events/gstone-rock-festival" target="_blank" class="purple">Kupfticket.at</a> gekauft werden. Diese enthalten einen kleinen Aufpreis für die Zahlungsabwicklung durch einen Drittanbieter.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="frage" tabindex="0">
+                        <a class="button-answer">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="4vh" viewBox="0 -960 960 960" width="4vh" 
+                             fill="#7400BE" stroke="#7400BE" stroke-width="3.5"><path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z"/>
+                            </svg>
+                        </a>
                         <p class="bebas-rounded purple">Kann man Tickets vor Ort kaufen?</p>
                     </div>
                     <div class="antwort">
