--- a/FAQ.html
+++ b/FAQ.html
@@ -103,7 +103,7 @@
                         <p class="bebas-rounded purple">Wo kann man Tickets kaufen?</p>
                     </div>
                     <div class="antwort">
-                        <p class="bebas-pro purple">Tickets können beim Gasteiner Badesee, bei den Bands oder auf anfrage an organisation@gstonerock.at gekauft werden. Online können Tickets auf <a href="https://kupfticket.com/events/gstone-rock-festival" target="_blank" class="purple">Kupfticket.at</a> gekauft werden. Diese enthalten einen kleinen Aufpreis für die Zahlungsabwicklung durch einen Drittanbieter.</p>
+                        <p class="bebas-pro purple">Tickets können beim Gasteiner Badesee, bei den Bands oder auf anfrage an organisation@gstonerock.at erworben werden. Online-Tickets sind auf <a href="https://kupfticket.com/events/gstone-rock-festival" target="_blank" class="purple">Kupfticket.at</a> verfügbar. Diese enthalten einen kleinen Aufpreis für die Zahlungsabwicklung durch einen Drittanbieter.</p>
                     </div>
                 </li>
                 <li>
