--- a/Anreise.html
+++ b/Anreise.html
@@ -34,7 +34,7 @@
                     <a href="index.html#Tickets" class="dropdown-item heading-font main-color-1 dropdown-extra">Tickets</a>
                     <a href="index.html#Line-Up" class="dropdown-item heading-font main-color-1 dropdown-extra">Line-Up</a>
                     <a href="Zeltwiese.html" class="dropdown-item heading-font main-color-1 dropdown-extra Keinverweis">Zeltwiese</a>
-                    <a href="#infos" class="dropdown-item heading-font main-color-1">Info</a>
+                    <a href="index.html#infos" class="dropdown-item heading-font main-color-1">Info</a>
                     <a href="#Private-Anreise" class="dropdown-item heading-font main-color-1 Keinverweis">Parken</a>
                     <a href="FAQ.html" class="dropdown-item heading-font main-color-1">FAQ</a>
                     <a href="Terms.html" class="dropdown-item heading-font main-color-1">Terms</a>
