--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <script src="Carousel-Skript.js"></script>
         </section>
         <section title="Line-Up & Tickets" class="line-up-tickets">
-            <img src="Images/Bilder-Tickets-Line-Up/Plakat Blur.webp" alt="Plakat mit Line-Up" class="plakat-line-up" id="Line-Up">
+            <img src="Images/Bilder-Tickets-Line-Up/G-Stone-Rock-Plakat.webp" alt="Plakat mit Line-Up" class="plakat-line-up" id="Line-Up">
             <div title="Tickets" class="tickets-container" id="Tickets">
                 <h1 class="heading-font main-color-2 tickets-überschrift">Tickets</h1>
                 <div class="preis-und-button">
@@ -198,7 +198,7 @@
                     </div>
                     <div class="band band-hidden">
                         <img src="Images/LOGO/LOGO-Gelb.svg" alt="Foto der Band ..." class="band-foto">
-                        <a class="heading-font main-color-2 bandname">1 more Bands to be Announced</a>
+                        <a class="heading-font main-color-2 bandname">1 more Band to be Announced</a>
                     </div>
                 </div>
                 <a class="bands-button-right"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" 
@@ -263,7 +263,7 @@
                 <div title="Impressum" class="impressum" id="impressum">
                     <h4 class="text-font">Impressum</h4>
                     <ul>
-                        <li class="impressum-items text-font" style="margin-top: +2vh;">Kunstverein Rote Brennnessel</li>
+                        <li class="impressum-items text-font" style="margin-top: +2vh;">Kunstverein Rote Brennessel</li>
                         <li class="impressum-items text-font">Vorderschneeberg 144, 5630 Bad Hofgastein, Austria</li>  
                         <li class="impressum-items text-font">06803127774</li>
                         <li class="impressum-items text-font">organisation@gstonerock.at</li>
