--- a/index.html
+++ b/index.html
@@ -177,14 +177,18 @@
                         <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/gmyas.music/" target="_blank">GMYAS</a>
                     </div>
                     <div class="band spotlight-band">
-                        <img src="Images/Bilder-Bands/Dopamine.webp" alt="Foto der Band Dopamine" class="band-foto">
-                        <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/dopamine_band_/" target="_blank">Dopamine</a>
+                        <img src="Images/Bilder-Bands/12sp.webp" alt="Foto der Band 12 Step Program" class="band-foto">
+                        <a class="heading-font main-color-2 bandname-zulang">12 Step Program</a>
                     </div>
                     <div class="band band-side band-mr">
                         <img src="Images/Bilder-Bands/Hay-Fever.webp" alt="Foto der Band Hay Fever" class="band-foto">
                         <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/hayfever_band/" target="_blank">Hay Fever</a>
                     </div>
-                    <div class="band band-side band-r">
+                     <div class="band band-r">
+                        <img src="Images/Bilder-Bands/Dopamine.webp" alt="Foto der Band Dopamine" class="band-foto">
+                        <a class="heading-font main-color-2 bandname" href="https://www.instagram.com/dopamine_band_/" target="_blank">Dopamine</a>
+                    </div>
+                    <div class="band band-side band-hidden">
                         <img src="Images/Bilder-Bands/Yellow-Furniture.webp" alt="Foto der Band main-color-2 Furniture" class="band-foto">
                         <a class="heading-font main-color-2 bandname-zulang" href="https://www.facebook.com/howtoleavearoom" target="_blank">Yellow-Furniture</a>
                     </div>
@@ -196,10 +200,7 @@
                         <img src="Images/Bilder-Bands/Bumbatschak.webp" alt="Foto der Band Bumbatschak" class="band-foto">
                         <a class="heading-font main-color-2 bandname" href="https://www.youtube.com/watch?v=kZExKVeqcpo&list=PLRkAXjsv68TTViDiC73vqbL-vF8Pw0Njw&index=3" target="_blank">Bumbatschak</a>
                     </div>
-                    <div class="band band-hidden">
-                        <img src="Images/LOGO/LOGO-Gelb.svg" alt="Foto der Band ..." class="band-foto">
-                        <a class="heading-font main-color-2 bandname">1 more Band to be Announced</a>
-                    </div>
+                    
                 </div>
                 <a class="bands-button-right"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" 
                     fill="#F5BD00"><path d="m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z"/></svg>
