--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     </div>
                     <div class="band spotlight-band">
                         <img src="Images/Bilder-Bands/12sp.webp" alt="Foto der Band 12 Step Program" class="band-foto">
-                        <a class="heading-font main-color-2 bandname-zulang">12 Step Program</a>
+                        <a class="heading-font main-color-2 bandname-zulang" href="https://www.instagram.com/12sp.band/" target="_blank">12 Step Program</a>
                     </div>
                     <div class="band band-side band-mr">
                         <img src="Images/Bilder-Bands/Hay-Fever.webp" alt="Foto der Band Hay Fever" class="band-foto">
